--- a/contact/contactthanks.html
+++ b/contact/contactthanks.html
@@ -3,15 +3,15 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>Contact Form | Thanks!</title>
+	<title>Formulário de Contato | Obrigado!</title>
 	<link rel="stylesheet" type="text/css" href="../css/blue.css" />
 </head>
 
 <body class="contact">
 
 
-		<h1 class="warn">Thanks for your message!</h1>
-	
+		<h1 class="warn">Obrigado pela sua mensagem!</h1>
+
 
 </body>
 
