--- a/contact/error.html
+++ b/contact/error.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>Contact Form | Error</title>
+	<title>Formulário de Contato | Error</title>
 	<link rel="stylesheet" type="text/css" href="../css/blue.css" />
 </head>
 
@@ -11,10 +11,10 @@
 
 	<div id="page-wrap">
 
-		<h1 class="warn">Uh oh! Something went wrong.</h1>
-	
+		<h1 class="warn">Uh oh! Algo deu errado.</h1>
+
 	</div>
-	
+
 	<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
 	</script>
 	<script type="text/javascript">
