--- a/contact/index.html
+++ b/contact/index.html
@@ -7,10 +7,10 @@
 	<link rel="stylesheet" type="text/css" href="../css/blue.css" />
 	<script type="text/javascript" src="js/jquery-1.2.6.min.js"></script>
 	<script type="text/javascript" src="js/jquery.validate.js"></script>
-	
+
 	<script type="text/javascript">
 	$(document).ready(function(){
-		
+
 		$("#contactform").validate();
 	});
 	</script>
@@ -19,7 +19,7 @@
 <body class="contact">
 <form method="post" action="contactengine.php" id="contactform">
 
-<label for="Name">Name:</label>
+<label for="Name">Nome:</label>
 
 	<input type="text" name="Name" id="Name" class="required" />
 
@@ -27,12 +27,12 @@
 
 	<input type="text" name="Email" id="Email" class="required email" />
 
-<label for="Message">Message:</label>
+<label for="Message">Menssagem:</label>
 
 	<textarea name="Message" id="Message" rows="10" cols="20" class="required"></textarea>
 <div class="clear"></div>
 <input type="submit" name="submit" value="" class="submit-button" />
 </form>
-	
+
 </body>
 </html>
