--- a/index.html
+++ b/index.html
@@ -134,21 +134,11 @@
               <li>Programação em PHP, HTML, CSS, SQL, JavaScript, JQuery.</li>
             </ul>
           </div>
+					
 					<div class="content">
-						<h3>01/02/2012 - 15/05/2012</h3>
-            <p><strong>MAISDATA COMUNICAÇÃO DIRETA. <br />
-              <em>Técnico de Informática</strong></em></p>
-            <ul class="info">
-							</br>
-							<a style="text-decoration: none;">Habilidades Desenvolvidas:</a>
-              <li>Montagem e Manutenção de Computadores, Instalação e Suporte de Software, Suporte em Redes e Servidores Linux e Windows.</li>
-              <li>Programação em PHP, Programação em MySQL.</li>
-            </ul>
-          </div>
-					<div class="content">
-						<h3>02/07/2012 - 30/06/2013</h3>
+						<h3>02/09/2011 - 06/01/2012</h3>
             <p><strong>RN NEGÓCIOS COMÉRCIO E INFORMÁTICA LTDA<br />
-              <em>Desenvolvedor Web e Programador</strong></em></p>
+              <em>Desenvolvedor Web (Estágio)r</strong></em></p>
             <ul class="info">
 							</br>
 							<a style="text-decoration: none;">Habilidades Desenvolvidas:</a>
