--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
 							<li class="cit"><strong>Estado Civil:</strong> solteiro</li>
 								<li class="cit">*veículo próprio</li>
               <li class="mail">rafacj7@gmail.com</li>
-							<li class="mail">jovito@criadorademundos.com.br</li>
-              <li class="web"><a href"https://www.criadorademundos.com.br/">www.criadorademundos.com.br</a</li>
+              <li class="web"><a href"https://rafaeljovito.github.io/">rafaeljovito.github.io/</a</li>
 							<hr style="width: 109%; margin-left: -9%;">
             </ul>
           </div>
@@ -103,6 +102,7 @@
 							<li>Joomla</li>
 							<li>Moodle 1.9</li>
 							<li>Moodle 2.7.*</li>
+							<li>Moodle 3.5.*</li>
 						</ul>
 					</div>
 				</div>
@@ -119,7 +119,7 @@
 							</br>
 							<a style="text-decoration: none;">Habilidades Desenvolvidas:</a>
               <li>Desenvolvimento, manutenção e implementação do sistema do EaD - IFRN</li>
-              <li>Programação em PHP, HTML5, CSS5, SQL, JavaScript, JQuery, plataforma Moodle, Pyton</li>
+              <li>Programação em PHP, HTML5, CSS5, SQL, JavaScript, JQuery, implementação de módulos da Plataforma Moodle, Pyton</li>
 							<li>Framework: WordPress, Laravel, Django</li>
             </ul>
           </div>
@@ -138,7 +138,7 @@
 					<div class="content">
 						<h3>02/09/2011 - 06/01/2012</h3>
             <p><strong>RN NEGÓCIOS COMÉRCIO E INFORMÁTICA LTDA<br />
-              <em>Desenvolvedor Web (Estágio)r</strong></em></p>
+              <em>Desenvolvedor Web (Estágio)</strong></em></p>
             <ul class="info">
 							</br>
 							<a style="text-decoration: none;">Habilidades Desenvolvidas:</a>
