[UPD] Atualização de Experiência

--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
           <h2><strong>Experiência Profissional</strong></h2>
           <div class="content">
             <h3>07/07/2021 - Ainda atualmente</h3>
-	    <p><strong>G4F<br />
+	    <p><strong>G4F - Soluções Corporativas<br />
 		<a style="text-decoration: none;">Local de trabalho:</a>
-            <p><strong>G4F - Soluções Corporativas<br />
+            <p><strong>IFRN – Instituto Federal de Educação, Ciência e Tecnologia do Rio Grande do Norte<br />
               <em>Programador Web Junior</strong></em></p>
             <ul class="info">
 							</br>
